--- a/expression/templates/expression/index.html
+++ b/expression/templates/expression/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -12,14 +14,14 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="/stylesheet/index.css" type="text/css" />
-    <link rel="stylesheet" href="/stylesheet/graph.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'expression/stylesheet/index.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'expression/stylesheet/graph.css' %}">
 
     <!-- d3js -->
     <script src="https://d3js.org/d3.v3.min.js"></script>
     <!-- Custom JS -->
-    <script type="text/javascript" src="/javascript/graph.js"></script>
-    <script type="text/javascript" src="/javascript/index.js"></script>
+    <script type="text/javascript" src="{% static 'expression/javascript/index.js' %}"></script>
+    <script type="text/javascript" src="{% static 'expression/javascript/graph.js' %}"></script>
 
 </head>
 
@@ -37,8 +39,8 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="/history">History</a></li>
-                <li><a href="/logout">Logout</a></li>
+                <li><a href="{% url 'expression:history' %}">History</a></li>
+                <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
             </ul>
         </div>
     </div>
@@ -51,7 +53,7 @@
             <p>
             <div class="input-group">
                 <span class="input-group-addon" id="basic-addon1">y=</span>
-                <input id="form_expression" class="form-control" value="{{expression}}" aria-describedby="basic-addon1" name="expression" type="text">
+                <input id="form_expression" class="form-control" value="{{ expression }}" aria-describedby="basic-addon1" name="expression" type="text">
             </div>
             </p>
             <p>
@@ -71,53 +73,51 @@
             <p>
             <div id="noise_div">
                 <span id="noise_span">&nbsp;&nbsp;&nbsp;Noise: </span>
-                <input id="form_noise" value="{{noise}}" name="noise" type="text">
+                <input id="form_noise" value="{{ noise }}", name="noise" type="text">
             </div>
             </p>
             <p>Interval of X plots:
-                <input id="form_fineness" value="{{fineness}}" name="fineness" type="text">
+                <input id="form_fineness" value="{{ fineness }}" name="fineness" type="text">
             </p>
             <p>X axis range:&nbsp;&nbsp;
-                <input id="form_x_min_range" value="{{x_min_range}}" name="x_min_range" type="text"> &le; x &le;
-                <input id="form_x_max_range" value="{{x_max_range}}" name="x_max_range" type="text">
+                <input id="form_x_min_range" value="{{ x_min_range }}" name="x_min_range" type="text"> &le; x &le;
+                <input id="form_x_max_range" value="{{ x_max_range }}" name="x_max_range" type="text">
             </p>
             <p>
             <div class="input-group">
                 <span class="input-group-addon" id="basic-addon1">Comment</span>
-                <input id="form_comment" value="{{comment}}" class="form-control" aria-describedby="basic-addon1" name="comment" type="text">
+                <input id="form_comment" value="{{ comment }}" class="form-control" aria-describedby="basic-addon1" name="comment" type="text">
             </div>
             </p>
             <button class="btn btn-lg btn-primary" type="submit" onclick="document.charset='utf-8';">Output</button>
         </form>
         <hr />
 
-        %if len(plots) != 0:
+        {% if plots %}
         <div>
-            <p>Expression: y = {{expression}}</p>
-            <p>Noise function: {{noise_function}}</p>
-            <p>Noise: {{noise}}</p>
-            <p>Interval of X plots: {{fineness}}</p>
-            <p>{{x_min_range}} &le; x &le; {{x_max_range}}</p>
-            <p>{{comment}}</p>
+            <p>Expression: y = {{ expression }}</p>
+            <p>Noise function: {{ noise_function }}</p>
+            <p>Noise: {{ noise }}</p>
+            <p>Interval of X plots: {{ fineness }}</p>
+            <p>{{ x_min_range }} &le; x &le; {{ x_max_range }}</p>
+            <p>{{ comment }}</p>
             <svg id="graph"></svg>
             <script type="text/javascript">
-                createsvg("{{plots}}");
+                createsvg("{{ plots }}");
             </script>
         </div>
         <div>
-            <button class="btn btn-lg btn-success" onclick="tableDownload({{plots}})">Download</button>
+            <button class="btn btn-lg btn-success" onclick="tableDownload({{ plots }})">Download</button>
         </div>
-        %end
+        {% endif %}
         <table class="table table-striped">
             <thead>
             <tr><th>x</th><th>y</th></tr>
             </thead>
             <tbody>
-            %for plot in plots:
-            %px = str(plot["x"])
-            %pf = str(plot["f"])
-            <tr><th>{{px}}</th><th>{{pf}}</th></tr>
-            %end
+            {% for plot in plots %}
+                <tr><th>{{ plot.x }}</th><th>{{ plot.f }}</th></tr>
+            {% endfor %}
             </tbody>
         </table>
     </div>
@@ -126,9 +126,9 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- Custom JavaScript -->
-%if message != "":
-<script type="text/javascript">alertSetShow("{{message}}");</script>
-%end
+{% if message != "" %}
+<script type="text/javascript">alertSetShow("{{ message }}");</script>
+{% endif %}
 
 </body>
 </html>
