--- a/expression/templates/expression/index.html
+++ b/expression/templates/expression/index.html
@@ -49,7 +49,7 @@
 <div class="container">
     <div class="starter-template">
         <div id="alert_message"></div>
-        <form id="expression_input" action="/" method="post" accept-charset="utf-8">
+        <form id="expression_input" action="{% url 'expression:index' %}" method="post" accept-charset="utf-8">
             <p>
             <div class="input-group">
                 <span class="input-group-addon" id="basic-addon1">y=</span>
@@ -89,6 +89,7 @@
                 <input id="form_comment" value="{{ comment }}" class="form-control" aria-describedby="basic-addon1" name="comment" type="text">
             </div>
             </p>
+            {% csrf_token %}
             <button class="btn btn-lg btn-primary" type="submit" onclick="document.charset='utf-8';">Output</button>
         </form>
         <hr />
