--- a/expression/templates/expression/404.html
+++ b/expression/templates/expression/404.html
@@ -8,9 +8,15 @@
     <title>Expression graph</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-git.js"></script>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- Jquery -->
+    <script   src="https://code.jquery.com/jquery-3.3.1.slim.js"   integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA="   crossorigin="anonymous"></script>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="{% static 'expression/stylesheet/index.css' %}">
+
 
 </head>
 <body>
@@ -29,7 +35,7 @@
                 <li><a href="{% url 'expression:index' %}">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="{% url 'expression:history' %}">History</a></li>
-                <li><a href="/logout">Logout</a></li>
+                <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
             </ul>
         </div>
     </div>
@@ -40,6 +46,7 @@
         <h1>Expression viewer</h1>
         <hr />
         <p>404 Not found.</p>
+        <p>Back to <a href="{% url expression:index %}">top page</a></p>
     </div>
 </div>
 
